https://bugs.webkit.org/show_bug.cgi?id=29332 <rdar://problem/7231652> REGRESSION (r48446): While a <select> popup menu is open, the rest of the WebView doesn't respond to mouse move events.

Reviewed by Sam Weinig.

* platform/win/PopupMenuWin.cpp:
(WebCore::translatePoint):
New helper function that translates a point between HWND coordinates.

(WebCore::PopupMenu::show):
Protect the PopupMenu if someone removes the <select> in response to a mouse
event. Handle WM_HOST_WINDOW_MOUSEMOVE events.

(WebCore::PopupMenu::wndProc):
in the WM_MOUSEMOVE handler, if the mouse is not over the popup, post a
WM_HOST_WINDOW_MOUSEMOVE event so that the host window (the WebView) gets the
mouse move event.



Canonical link: https://commits.webkit.org/40094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48529 268f45cc-cd09-0410-ab3c-d52691b4dbfc